--- a/deploy/charts/trust-manager/values.yaml
+++ b/deploy/charts/trust-manager/values.yaml
@@ -67,6 +67,8 @@ app:
     # -- If false, disables the default seccomp profile, which might be required to run on certain platforms
     seccompProfileEnabled: true
 
+authorizedSecrets: ['ca-bundle']
+
 resources: {}
   # -- Kubernetes pod resource limits for trust.
   # limits:
